<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity"
    android:background="@drawable/image_background"
    android:paddingBottom="30dp"
    android:id="@+id/login_register_layout"
    >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:paddingBottom="100dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/image_decoration"
            android:scaleType="centerCrop"
            android:layout_centerVertical="true"
            android:contentDescription="@string/image_decoration"
            android:paddingBottom="100dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:orientation="vertical"
            android:paddingBottom="100dp"
            >
            <TextView
                android:id="@+id/calibrapps-logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/calibrapps"
                android:textSize="50sp"
                android:letterSpacing="0.1"
                android:fontFamily="@font/pt_sans_b"
                android:textColor="#ffffff"
                android:textAlignment="center"
                />

            <TextView
                android:id="@+id/calibrapps-description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/customer_application"
                android:textSize="20sp"
                android:fontFamily="@font/pt_sans_b"
                android:textColor="#ffffff"
                android:textAlignment="center"
                />


        </LinearLayout>

    </RelativeLayout>



    <Button
        android:id="@+id/login_button"
        android:layout_width="328dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/register_button"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/login_button"
        android:scaleType="centerCrop"
        android:background="@drawable/image_button_white"
        android:text="@string/login"
        android:textAllCaps="false"
        android:fontFamily="@font/pt_sans_b"
        android:textColor="#3F4469"
        android:textSize="16sp"
        android:letterSpacing="0.03"/>
<!--        android:onClick="onLoginPressed"-->
<!--        tools:ignore="OnClick"-->



    <Button
        android:id="@+id/register_button"
        android:layout_width="328dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/image_button_blue_white"
        android:contentDescription="@string/register_button"
        android:scaleType="centerCrop"
        android:text="@string/register"
        android:textAllCaps="false"
        android:fontFamily="@font/pt_sans_b"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:letterSpacing="0.03"
    />

</RelativeLayout>