<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:background="#ffffff">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@drawable/image_action_bar_background"
        android:id="@+id/action_bar_custom"

    >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_back"
            android:layout_centerVertical="true"
            android:padding="20dp"
            android:onClick="onBackPressed"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calibrapps"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:fontFamily="@font/pt_sans_bold"
            android:textSize="20sp"
            android:letterSpacing="0.1"
            android:textColor="#ffffff"
            />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@id/action_bar_custom"
        android:orientation="vertical"
        android:gravity="center"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="32sp"
            android:letterSpacing="0.03"
            android:fontFamily="@font/pt_sans_b"
            android:textColor="#3F4469"
            android:textAlignment="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="50dp"
            android:gravity="center"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="#808080"
                android:fontFamily="@font/pt_sans_b"
                android:textAlignment="center"
                android:textSize="18sp"
                android:letterSpacing="0.02"
                />

            <EditText
                android:layout_width="340dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:hint="@string/masukkan_email"
                android:background="@drawable/image_input"
                android:fontFamily="@font/pt_sans_regular"
                android:textColor="#667B9D"
                android:textAlignment="center"
                android:textSize="18sp"
                android:letterSpacing="0.02"
                android:maxLines="1"
                android:nextFocusDown="@id/input_password"
                android:inputType="textEmailAddress"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="24dp"
            android:gravity="center"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="#808080"
                android:fontFamily="@font/pt_sans_b"
                android:textAlignment="center"
                android:textSize="18sp"
                android:letterSpacing="0.02"
                />

            <EditText
                android:id="@+id/input_password"
                android:layout_width="340dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:hint="@string/masukkan_password"
                android:background="@drawable/image_input"
                android:fontFamily="@font/pt_sans_regular"
                android:textColor="#667B9D"
                android:textAlignment="center"
                android:textSize="18sp"
                android:letterSpacing="0.02"
                android:inputType="textPassword"
                />
        </LinearLayout>


        <Button
            android:id="@+id/login_button"
            android:layout_width="340dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/image_button_blue"
            android:contentDescription="@string/login_button"
            android:fontFamily="@font/pt_sans_b"
            android:letterSpacing="0.03"
            android:scaleType="centerCrop"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lupa_password"
            android:layout_marginTop="20dp"
            android:textColor="#83ABED"
            android:fontFamily="@font/pt_sans_regular"
            android:textAlignment="center"
            android:textSize="18sp"
            android:letterSpacing="0.02"
            />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/version"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:textColor="#D2A6A6"
        android:fontFamily="@font/pt_sans_b"
        android:textAlignment="center"
        android:textSize="14sp"
        android:letterSpacing="0.02"
        android:layout_gravity="bottom"
    />

</RelativeLayout>